# ImpulseTrackerMusicPlayer

./: .clang-format  .gitmodules  CMakeLists.txt  Makefile  README.md  TODO.txt  a.out
src/: Channel.h  Mixer.h  PatternEntry.cpp  PatternEntry.h  Sample.h  paex_sine_c++.cpp  player.cpp
src/loader/: it.cpp  it.h  s3m.cpp  s3m.h
src/player/: Channel.h  Mixer.h  Module.h  Pattern.cpp  Pattern.h  PatternEntry.cpp  PatternEntry.h  Player.cpp  Player.h  Sample.h
tests/: CMakeLists.txt  main.cpp  test_AudioGen.cpp  test_Channel.cpp  test_Mixer.cpp  test_PatternData.cpp  test_Player.cpp  test_Sample.cpp
